UI improvements/fixes. Exercise wizard.

--- a/client/src/app/account/account.page.html
+++ b/client/src/app/account/account.page.html
@@ -18,9 +18,9 @@
             {{"buy_this_app" | translate}}
         </h2>
     </div>
-    <!--
-    <div class="bg_img center_img">
-         <img src="{{ user?.avatar }}" class="crop_img">
+
+    <!-- <div class="bg_img center_img">
+        <img src="{{ user?.avatar }}" class="crop_img">
     </div> -->
 
     <div class="d-flex">
