--- a/client/src/app/register/register.page.html
+++ b/client/src/app/register/register.page.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </div>
-        <div class="form ion-padding-top">
+        <div class="form ion-padding-top ion-padding-bottom">
             <ion-list lines="none">
                 <ion-radio-group #group formControlName="type">
                     <ion-item>
