--- a/client/src/app/template/template.component.html
+++ b/client/src/app/template/template.component.html
@@ -51,7 +51,7 @@
 <ion-footer>
     <ion-toolbar>
         <div class="button-group ion-padding">
-            <ion-button [disabled]="templateForm.invalid" expand="block" (click)="saveChanges()">
+            <ion-button class="btn" [disabled]="templateForm.invalid" expand="block" (click)="saveChanges()">
                 {{ 'save' | translate }}
             </ion-button>
         </div>
