--- a/client/src/app/form/exercise-form/exercise-form.component.scss
+++ b/client/src/app/form/exercise-form/exercise-form.component.scss
@@ -1,35 +1,76 @@
-.sets-container {
-    margin: 10px 0;
-}
-
-.rep-row {
+.weight-value,
+.rep-value {
     display: flex;
     align-items: center;
-    padding: 12px 8px;
-    margin-bottom: 8px;
-    border-radius: 8px;
-    background-color: var(--ion-color-light);
-    position: relative;
-    cursor: pointer;
+}
+
+.small {
+    color: var(--ion-color-medium);
+    font-size: 11px !important;
+}
+
+.set-history {
+    position: absolute;
+    top: -2px;
+    align-items: center;
+
+    display: block;
+
+    @extend .small
+}
+
+.form-container {
+    margin: 10px 0px;
+
+    ion-item-sliding {
+        display: flex;
+        align-items: center;
+
+        ion-item {
+            flex-grow: 1;
+        }
+
+        ion-checkbox {
+            margin-left: 10px;
+        }
+    }
+
+    .rep-row {
+        display: flex;
+        align-items: center;
+        padding: 12px 8px;
+        border-radius: 8px;
+        background-color: var(--ion-color-light);
+        position: relative;
+        cursor: pointer;
+
+        .set-display-container {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+
+            .rep-current-value {
+                display: flex;
+                margin-right: auto;
+                gap: 4px;
+            }
+        }
+    }
 }
 
 .set-number {
-    width: 30px;
+    width: 25px;
     font-weight: bold;
 }
 
-.set-values {
-    flex: 1;
-    display: flex;
-    gap: 10px;
-}
-
+.rep-value,
 .weight-value {
-    font-weight: 500;
+    gap: 4px
 }
 
 .set-action-indicator {
-    color: var(--ion-color-medium);
+    padding-left: 5px;
+    margin-left: 0px;
 }
 
 .type-selector-toolbar {
@@ -46,6 +87,10 @@ ion-col {
     display: flex;
     align-items: center;
     gap: 8px;
+
+    ion-button:last-child {
+        --padding-end: 0px
+    }
 }
 
 .exercise-item {
@@ -91,7 +136,7 @@ ion-col {
     margin-top: 12px;
 
     ion-button {
-        background-color: var(--ion-color-light);
+        flex-grow: 1;
     }
 }
 
@@ -122,12 +167,20 @@ ion-item.rep-row {
     }
 }
 
-
 ion-item-sliding {
     margin-bottom: 4px;
 }
 
-.picker-min-width {
-    width: 0px;
-    padding-left: 5px;
+.picker-range-suffix {
+    padding: 0px;
+}
+
+ion-modal {
+    --height: auto;
+
+    align-items: end;
+}
+
+ion-picker {
+    margin-bottom: var(--ion-safe-area-bottom);
 }
