--- a/client/src/scss/theme/variables.scss
+++ b/client/src/scss/theme/variables.scss
@@ -50,7 +50,8 @@
 
     --ion-color-medium: #92949c;
     --ion-color-medium-rgb: 146, 148, 156;
-    --ion-color-medium-contrast: #000000;
+    // --ion-color-medium-contrast: #000000;
+    --ion-color-medium-contrast: #ffffff;
     --ion-color-medium-contrast-rgb: 0, 0, 0;
     --ion-color-medium-shade: #808289;
     --ion-color-medium-tint: #9d9fa6;
@@ -63,12 +64,47 @@
     --ion-color-light-tint: #f5f6f9;
 
     --ion-text-color: #222428;
-    --ion-text-color-rgb: rgb(34, 36, 40);
+    --ion-text-color-rgb: 34, 36, 40;
 
     --ion-background-color: #EBEBEB;
-    --highlight-background: var(--ion-background-color);
-    --ion-toolbar-segment-background: var(--ion-color-light);
-    --ion-overlay-background-color: var(--ion-background-color);
+    --ion-background-color-rgb: 235, 235, 235;
+
+    --ion-text-color-step-50: #2e3034;
+    --ion-text-color-step-100: #3a3c40;
+    --ion-text-color-step-150: #47484c;
+    --ion-text-color-step-200: #535558;
+    --ion-text-color-step-250: #606164;
+    --ion-text-color-step-300: #6c6d70;
+    --ion-text-color-step-350: #79797c;
+    --ion-text-color-step-400: #858688;
+    --ion-text-color-step-450: #929294;
+    --ion-text-color-step-500: #9e9ea0;
+    --ion-text-color-step-550: #ababac;
+    --ion-text-color-step-600: #b7b7b8;
+    --ion-text-color-step-650: #c4c4c4;
+    --ion-text-color-step-700: #d0d0d0;
+    --ion-text-color-step-750: #dddddd;
+    --ion-text-color-step-800: #e9e9e9;
+    --ion-text-color-step-850: #f6f6f6;
+    --ion-text-color-step-900: #ffffff;
+
+    --ion-background-color-step-50: #dedede;
+    --ion-background-color-step-100: #d1d1d1;
+    --ion-background-color-step-150: #c4c4c4;
+    --ion-background-color-step-200: #b7b7b7;
+    --ion-background-color-step-250: #aaaaaa;
+    --ion-background-color-step-300: #9d9d9d;
+    --ion-background-color-step-350: #909090;
+    --ion-background-color-step-400: #838383;
+    --ion-background-color-step-450: #767676;
+    --ion-background-color-step-500: #696969;
+    --ion-background-color-step-550: #5c5c5c;
+    --ion-background-color-step-600: #4f4f4f;
+    --ion-background-color-step-650: #424242;
+    --ion-background-color-step-700: #353535;
+    --ion-background-color-step-750: #282828;
+    --ion-background-color-step-800: #1b1b1b;
+    --ion-background-color-step-900: #010101;
 }
 
 [data-theme='dark'] {
@@ -136,9 +172,48 @@
     --ion-color-light-tint: #383a3e;
 
     --ion-background-color: #1b1b20;
-    --ion-background-color-rgb: 18, 18, 18;
+    --ion-background-color-rgb: 27, 27, 32;
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255, 255, 255;
+
+    --ion-text-color-step-50: #f2f2f2;
+    --ion-text-color-step-100: #e6e6e6;
+    --ion-text-color-step-150: #d9d9d9;
+    --ion-text-color-step-200: #cccccc;
+    --ion-text-color-step-250: #bfbfbf;
+    --ion-text-color-step-300: #b3b3b3;
+    --ion-text-color-step-350: #a6a6a6;
+    --ion-text-color-step-400: #999999;
+    --ion-text-color-step-450: #8c8c8c;
+    --ion-text-color-step-500: #808080;
+    --ion-text-color-step-550: #737373;
+    --ion-text-color-step-600: #666666;
+    --ion-text-color-step-650: #595959;
+    --ion-text-color-step-700: #4d4d4d;
+    --ion-text-color-step-750: #404040;
+    --ion-text-color-step-800: #333333;
+    --ion-text-color-step-850: #262626;
+    --ion-text-color-step-900: #1a1a1a;
+
+    --ion-background-color-step-50: #27272c;
+    --ion-background-color-step-100: #333338;
+    --ion-background-color-step-150: #3f3f44;
+    --ion-background-color-step-200: #4b4b50;
+    --ion-background-color-step-250: #57575c;
+    --ion-background-color-step-300: #636368;
+    --ion-background-color-step-350: #6f6f74;
+    --ion-background-color-step-400: #7b7b80;
+    --ion-background-color-step-450: #87878c;
+    --ion-background-color-step-500: #939398;
+    --ion-background-color-step-550: #9f9fa4;
+    --ion-background-color-step-600: #ababb0;
+    --ion-background-color-step-650: #b7b7bc;
+    --ion-background-color-step-700: #c3c3c8;
+    --ion-background-color-step-750: #cfcfd4;
+    --ion-background-color-step-800: #dbdbe0;
+    --ion-background-color-step-850: #e7e7ec;
+    --ion-background-color-step-900: #f3f3f8;
+
     --ion-border-color: #222222;
     --ion-item-background: #1e1e1e;
     --ion-toolbar-background: #1f1f1f;
